# tetebeche

./: .gitignore  README.md  pyproject.toml
tetebeche/: cmd.py
